--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -19,7 +19,7 @@
     </wot-container>
   </wot-row>
   <wot-row>
-    <wot-button slot="right" (click)="done()">Schritt abschließen</wot-button>
+    <wot-button slot="right" (press)="done()">Schritt abschließen</wot-button>
   </wot-row>
 </wot-page>
 
