--- a/wot-frontend/src/app/pages/game/game.component.html
+++ b/wot-frontend/src/app/pages/game/game.component.html
@@ -1,3 +1,4 @@
+<nebula></nebula>
 <canvas id="canvas" #canvas></canvas>
 <div class="bottomright drawingCanvas" *ngIf="!gameover">
     <ngx-drawing-canvas [width]="'400'" [height]="'400'" strokeColor="#fff" backgroundColor="rgba(0, 0, 0, 0)" #drawingCanvas></ngx-drawing-canvas>
