fixed: disable save drawing when empty

--- a/wot-frontend/src/app/pages/game/game.component.html
+++ b/wot-frontend/src/app/pages/game/game.component.html
@@ -2,7 +2,7 @@
 <canvas id="canvas" #canvas></canvas>
 <div class="bottomright drawingCanvas">
     <ngx-drawing-canvas [width]="'400'" [height]="'400'" strokeColor="#fff" [strokeWidth]="4" backgroundColor="rgba(0, 0, 0, 0)" #drawingCanvas></ngx-drawing-canvas>
-    <wot-button class="bottomright" icon="checkmark" (click)="saveCanvas(drawingCanvas)"></wot-button>
+    <wot-button class="bottomright" icon="checkmark" (press)="saveCanvas(drawingCanvas)" [disabled]="drawingCanvas.empty"></wot-button>
 </div>
 <div *ngIf="truck" class="health-bar">
     <wot-life-bar [maxLifes]="3" [lifes]="truck.health"></wot-life-bar>
