improved progress-bar component

--- a/wot-frontend/src/app/pages/analytics/analytics.component.html
+++ b/wot-frontend/src/app/pages/analytics/analytics.component.html
@@ -22,20 +22,20 @@
           <div *ngFor="let c of classes; index as i" [style.color]="getClassColor(i)" class="class-prediction">
             <div class="class-name">{{c}}:</div>
             <div class="class-value">
-              <wot-progress-bar [height]="10" [width]="400" [progress]="selectedImage.prediction[i]" [total]="1"></wot-progress-bar>
+              <wot-progress-bar height="10px" width="400px" background="auto" [progress]="selectedImage.prediction[i]" [total]="1"></wot-progress-bar>
               {{selectedImage.prediction[i].toFixed(2)}}
             </div>
           </div>
           Du hast gesagt das ist ein {{selectedImage.label}}
         </div>
-  
+
       </div>
     </wot-row>
     <wot-row>
       <wot-button slot="right" (press)="done()">Beenden</wot-button>
     </wot-row>
 </wot-page>
-  
+
   <wot-success-overlay (continue)="continue()" #successOverlay>
     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
   </wot-success-overlay>
