--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -1,4 +1,4 @@
 <div class="wot-overlay">
   <p>training works!</p>
-
+  <wot-progress-bar height="24px" width="400px" label="Epoche 10: Analysiere Bilder" [progress]="0.5" [total]="1"></wot-progress-bar>
 </div>
