--- a/wot-frontend/src/styles.scss
+++ b/wot-frontend/src/styles.scss
@@ -23,6 +23,10 @@
   --color-lightgray: #717171;
   --color-gray: #5a5953;
   --color-darkgray: #1d1e25;
+
+  --color-danger: #e63946;
+  --color-warning: #fca311;
+  --color-success: #90be6d;
 }
 
 html,
