--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
@@ -15,11 +15,13 @@
       <p class="p-label">{{class.labelName}}</p>
     </div>
 
-    <div *ngIf="lastIndex" class="category" (click)="undo()">
-      <div class="icon-count">
-        <ion-icon name="arrow-undo" class="btn-icon"></ion-icon>
+    <wot-button [disabled]="lastIndex===0" class="undo-btn" (press)="undo()">
+      <div class="undo-div">
+        <div class="icon-count">
+          <ion-icon name="arrow-undo" class="btn-icon"></ion-icon>
+        </div>
+        <p class="p-label">Zurück</p>
       </div>
-      <p class="p-label">Korrigieren</p>
-    </div>
+    </wot-button>
   </div>
 </div>
