--- a/wot-frontend/src/app/common/layout/wot-progress-bar/wot-progress-bar.component.html
+++ b/wot-frontend/src/app/common/layout/wot-progress-bar/wot-progress-bar.component.html
@@ -1,5 +1,5 @@
 <div class="progress-bar-container" [ngStyle]="{'width': width + 'px'}">
-    <div class="progress-bar {{color}}" 
+    <div class="progress-bar" 
      [ngStyle]="{'width': progress + '%', 'height': height + 'px'}">
     </div>
  </div>
