--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -27,4 +27,4 @@
   Super! Ihr habt euch mit den verschiedenen Objekten im Weltall vertraut gemacht. Nun könnt ihr das Erkennungssystem entwickeln.
 </wot-success-overlay>
 
-<wot-popover [text]="currentDescription" #popover></wot-popover>
+<wot-popover #popover></wot-popover>
