--- a/wot-frontend/src/app/common/bars/wot-progress-bar/wot-progress-bar.component.html
+++ b/wot-frontend/src/app/common/bars/wot-progress-bar/wot-progress-bar.component.html
@@ -1,9 +1,9 @@
 <div class="progress-bar-wrapper" [style.font-size]="labelSize">
   <div class="progress-bar-container" [style.width]="width">
     <div class="progress-bar"
-         [style.width]="getNormedProgress()+'%'"
          [style.height]="height"
          [style.background]="getBackground()"
+         [@progressAnimation]="{ value: progress, params: { width: getNormedProgress()+'%', animationSpeed: animationSpeed }}"
     >
     </div>
   </div>
