added training animation

--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -1,6 +1,6 @@
 <div class="wot-overlay">
   <wot-container>
-    <div class="image-container" [@.disabled]="epoch > 10">
+    <div class="container img" [@.disabled]="epoch > 10">
       <div class="image-inner-container" [@imageAnimation]="{value: images, params: {time: this.delayFactor*0.1}}">
         <span *ngFor="let image of images; let i=index;">
             <img class="img-data" src="{{image.imagePath}}" [@colorAnimation]="ratings[i]"/>
@@ -8,22 +8,24 @@
       </div>
     </div>
   </wot-container>
+  <neural-net-sim #neuralNet></neural-net-sim>
   <wot-container>
-    <neural-net-sim #neuralNet></neural-net-sim>
+    <div class="container">
+      <wot-column>
+        <wot-row>
+          <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch" [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+        </wot-row>
+        <wot-row>
+          <wot-progress-bar height="24px" width="400px" [label]="getStepLabel()" [progress]="this.step" [total]="4" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+        </wot-row>
+        <wot-row>
+          <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 0" *ngIf="stage < 2">Training Starten</wot-button>
+          <wot-button slot="fill" (press)="continueTraining()" [disabled]="stage != 2" *ngIf="stage >= 2">Training Fortsetzen</wot-button>
+        </wot-row>
+        <wot-row>
+          <h1>Genauigkeit: {{accuracy | number: '1.0-2'}}%</h1>
+        </wot-row>
+      </wot-column>
+    </div>
   </wot-container>
-  <wot-column>
-    <wot-row>
-      <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch" [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
-    </wot-row>
-    <wot-row>
-      <wot-progress-bar height="24px" width="400px" [label]="getStepLabel()" [progress]="this.step" [total]="4" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
-    </wot-row>
-    <wot-row>
-      <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 0" *ngIf="stage < 2">Training Starten</wot-button>
-      <wot-button slot="fill" (press)="continueTraining()" [disabled]="stage != 2" *ngIf="stage >= 2">Training Fortsetzen</wot-button>
-    </wot-row>
-    <wot-row>
-      <h1>Genauigkeit: {{accuracy | number: '1.0-2'}}%</h1>
-    </wot-row>
-  </wot-column>
 </div>
