--- a/wot-frontend/src/app/common/popover/wot-popover/wot-popover.component.scss
+++ b/wot-frontend/src/app/common/popover/wot-popover/wot-popover.component.scss
@@ -1,6 +1,6 @@
 .popover {
     background-color: var(--color-bg-lighter);
-    position: absolute;
+    position: fixed;
     padding: 5px;
     color: white;
     text-align: center;
