--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -8,24 +8,35 @@
       </div>
     </div>
   </wot-container>
-  <neural-net-sim #neuralNet></neural-net-sim>
+  <wot-column>
+    <h1 style="margin: 6px">Das Neuronale-Netz</h1>
+    <h3 style="margin: 0">Hinter unserem Erkennungssystem</h3>
+    <neural-net-sim #neuralNet></neural-net-sim>
+  </wot-column>
   <wot-container>
     <div class="container">
-      <wot-column>
+      <wot-row>
+        <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch" [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+      </wot-row>
+      <wot-row>
+        <wot-progress-bar height="24px" width="400px" [label]="getStepLabel()" [progress]="this.step" [total]="4" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+      </wot-row>
+      <wot-row>
+        <div class="info-text" *ngIf="stage >= 2">
+          <p *ngIf="stage === 2">HINWEIS: Das Training des Modells ist rechenintensiv und entsprechend sehr langsam. Daher beschleunigen wir das Ganze jetzt.</p>
+          <p *ngIf="stage > 2 && epoch <= 200">Beschleunigung: {{2/delayFactor}}x</p>
+          <p *ngIf="epoch > 200">Beschleunigung: HYPERSPEED</p>
+        </div>
+      </wot-row>
+      <div style="position: absolute; bottom: 48px; width: calc(100% - 96px)">
         <wot-row>
-          <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch" [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
-        </wot-row>
-        <wot-row>
-          <wot-progress-bar height="24px" width="400px" [label]="getStepLabel()" [progress]="this.step" [total]="4" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+          <h2>Genauigkeit: {{accuracy | number: '1.0-2'}}%</h2>
         </wot-row>
         <wot-row>
           <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 0" *ngIf="stage < 2">Training Starten</wot-button>
           <wot-button slot="fill" (press)="continueTraining()" [disabled]="stage != 2" *ngIf="stage >= 2">Training Fortsetzen</wot-button>
         </wot-row>
-        <wot-row>
-          <h1>Genauigkeit: {{accuracy | number: '1.0-2'}}%</h1>
-        </wot-row>
-      </wot-column>
+      </div>
     </div>
   </wot-container>
 </div>
