--- a/wot-frontend/src/app/pages/training/training.component.scss
+++ b/wot-frontend/src/app/pages/training/training.component.scss
@@ -14,6 +14,7 @@
 }
 
 .container {
+  position: relative;
   height: 648px;
   padding: 48px;
 }
@@ -31,6 +32,15 @@
 .img-data {
   border-radius: 0;
   width: 148px;
+  background: linear-gradient(45deg, var(--color-bg-dark), var(--color-bg));
+  border: var(--color-text) solid 1px;
+}
+
+.info-text {
+  display: block;
+  width: 376px;
+  color: var(--color-text);
+  padding: 12px;
   background: linear-gradient(45deg, var(--color-bg-dark), var(--color-bg));
   border: var(--color-text) solid 1px;
 }
