--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -40,3 +40,7 @@
     </div>
   </wot-container>
 </div>
+
+<wot-success-overlay (continue)="continue()" #successOverlay>
+  Super! Wir haben unser erstes Neuronales-Netz trainiert! Nun müssen wir unserem Abwehrsystem noch mitteilen, wie es mit den erkannten Objekten umgehen soll.
+</wot-success-overlay>
