--- a/wot-frontend/src/app/pages/analytics/analytics.component.html
+++ b/wot-frontend/src/app/pages/analytics/analytics.component.html
@@ -1,10 +1,10 @@
 <wot-page>
     <wot-step-info>
       <h1>
-        Schritt X: Analyse
+        Schritt 7: Analyse
       </h1>
       <p>
-        Auf dieser Seite siehst du wie eure selbstgezeichneten Bilder erkannt wurden.
+        Auf dieser Seite seht ihr wie eure selbstgezeichneten Bilder erkannt wurden.
       </p>
     </wot-step-info>
     <wot-row>
