--- a/wot-frontend/src/app/pages/data-creation/data-creation.component.html
+++ b/wot-frontend/src/app/pages/data-creation/data-creation.component.html
@@ -4,7 +4,7 @@
       Schritt 2: Datensatz-Erstellung
     </h1>
     <p>
-      Zeichnet im Team vier von den Objekten: Asteroid, Astronaut, Brief, Ufo, Versorgungsbox, Auto, Satellit, Satellitenschüssel oder Raumschiff.
+      Zeichnet im Team vier der folgenden Objekte: Asteroid, Astronaut, Brief, Ufo, Versorgungsbox, Auto, Satellit, Satellitenschüssel, Raumschiff. Klickt nach jedem gezeichneten Objekt auf den Haken.
     </p>
   </wot-step-info>
   <wot-row>
