--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -4,7 +4,7 @@
       Schritt 3: Klassifizierung
     </h1>
     <p>
-      Um die Objekte zuordnen zu können ist es nun wichtig diesen eine Kategorie zuzuweisen. Ordne dafür die Objekte in die unten stehenden Kacheln ein.
+      Um die Objekte zuordnen zu können, ist es nun wichtig diesen eine Kategorie zuzuweisen. Sortiert dafür die Objekte in die untenstehenden Ordner ein.
     </p>
   </wot-step-info>
   <wot-row>
@@ -16,5 +16,5 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Super! Ihr habt den Objektenzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden Zeichnungen eine Kategorie zuzuordnen.
+  Super! Ihr habt den Objektzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden Zeichnungen einer Kategorie zuzuordnen.
 </wot-success-overlay>
