--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -4,7 +4,7 @@
       Schritt 1: Übersicht
     </h1>
     <p>
-      Der Computer hat Bilder von Objekten gesammelt, die uns in vergangenen Missionen begegnet sind.
+      Der Computer hat Bilder von Objekten gesammelt, die uns in vergangenen Missionen begegnet sind. Verschafft euch einen Überblick von den verschiedenen Objekten, die uns im Weltall begegnen können.
     </p>
   </wot-step-info>
   <wot-row>
