--- a/wot-frontend/src/app/app.component.html
+++ b/wot-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 <wot-button *ngIf="router.url != '/landing'" icon="close" (press)="confirmRestart()" class="close-btn"></wot-button>
-<div class="confirm-overlay confirm-text" *ngIf="showResetOverlay">
+<div class="confirm-overlay" *ngIf="showResetOverlay">
     Willst du wirklich abbrechen?    
     <wot-button (press)="restart()" class="confirm-btn">Ja</wot-button>
     <wot-button (press)="decline()" class="confirm-btn">Nein</wot-button>
