--- a/wot-frontend/src/app/app.component.scss
+++ b/wot-frontend/src/app/app.component.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 101;
 }
 
 .confirm-overlay {
@@ -13,13 +14,12 @@
     padding: 5px;
     vertical-align: middle;
     align-items: center;
-}
-.confirm-text {
     color: white;
     font-weight: bold;
     font-size: 20px;
-    top:0;
+    z-index: 101;
 }
+
 .confirm-btn {
     margin: 5px;
 }
