--- a/wot-frontend/src/app/pages/game/game.component.html
+++ b/wot-frontend/src/app/pages/game/game.component.html
@@ -1,6 +1,6 @@
 <nebula></nebula>
 <canvas id="canvas" #canvas></canvas>
-<div class="bottomright drawingCanvas" *ngIf="!gameover">
+<div class="bottomright drawingCanvas" *ngIf="!gameover" #canvasContainer>
     <ngx-drawing-canvas [width]="'400'" [height]="'400'" strokeColor="#fff" [strokeWidth]="4" backgroundColor="rgba(0, 0, 0, 0)" #drawingCanvas></ngx-drawing-canvas>
     <wot-button class="bottomright" icon="checkmark" (press)="saveCanvas(drawingCanvas)" [disabled]="drawingCanvas.strokes.length === 0"></wot-button>
 </div>
@@ -8,3 +8,4 @@
     <wot-life-bar [maxLifes]="3" [lifes]="truck.health"></wot-life-bar>
 </div>
 <gameover-overlay *ngIf="gameover"></gameover-overlay>
+<wot-popover *ngIf="survivedObjects <= 10" #popover></wot-popover>
