improved rating generation

--- a/wot-frontend/src/app/common/layout/wot-container/wot-container.component.scss
+++ b/wot-frontend/src/app/common/layout/wot-container/wot-container.component.scss
@@ -1,4 +1,6 @@
 .wot-container {
   background-image: url("/assets/ui/sun_rays.jpg");
   background-size: cover;
+  width: fit-content;
+  margin: auto;
 }
