--- a/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.scss
+++ b/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.scss
@@ -16,7 +16,7 @@ ion-icon {
   font-size: 24px;
 }
 
-.btn::before {
+.btn:hover::before {
   background: #fff;
   content: "";
   height: 155px;
@@ -29,7 +29,7 @@ ion-icon {
   left: -60%;
 }
 
-.btn::after {
+.btn:hover::after {
   background: #fff;
   content: "";
   height: 20rem;
