--- a/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.html
+++ b/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.html
@@ -7,7 +7,7 @@
   <p *ngIf="win" class="gameover-info">Der Truck hat die Mission erfolgreich abgeschlossen.</p>
   <p class="gameover-info">Ihr könnt nun erneut versuchen ein Erkennungssystem zu trainieren oder das Spiel mit der Auswertung beenden.</p>
   <wot-row>
-    <wot-button routerLink="/analytics">Versuche es erneut</wot-button>
+    <wot-button routerLink="/data-overview">Versucht es erneut</wot-button>
   </wot-row>
   <wot-row>
     <wot-button routerLink="/analytics">Zur Auswertung der Ergebnisse</wot-button>
